--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <video autoplay loop playsinline>
-      <source src="./sg.mp4" type="video/mp4" />
+      <source src="./video/sg.mp4" type="video/mp4" />
     </video>
     <h1>Rock Paper Scissors Game</h1>
     <p>Choose your move:</p>
