--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <video autoplay loop playsinline>
+    <video autoplay loop controls>
       <source src="./video/sg.mp4" type="video/mp4" />
     </video>
-    <h1>Rock Paper Scissors Game</h1>
-    <p>Choose your move:</p>
-    <div class="buttons">
-      <button id="rock">&#x1F44A;</button>
-      <button id="paper">&#x1f590;</button>
-      <button id="scissors">&#x270c;</button>
+    <div class="balta">
+      <h1>Rock Paper Scissors Game</h1>
+      <p>Choose your move:</p>
+      <div class="buttons">
+        <button id="rock">&#x1F44A;</button>
+        <button id="paper">&#x1f590;</button>
+        <button id="scissors">&#x270c;</button>
+      </div>
+      <p id="result"></p>
+      <p id="scores">
+        Your score: <span id="user-score">0</span> Computer score:
+        <span id="computer-score">0</span>
+      </p>
     </div>
-    <p id="result"></p>
-    <p id="scores">
-      Your score: <span id="user-score">0</span> Computer score:
-      <span id="computer-score">0</span>
-    </p>
     <script src="index.js"></script>
   </body>
 </html>
